--- a/foodmenu/index.html
+++ b/foodmenu/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-    <h1>Menu Selector</h1>
+    <h1>Menu Options</h1>
   <label for="category">Select a category:</label>
   <select id="category">
     <option value="drinks">Drinks</option>
